<resources>
    <string name="app_name">Online Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main_page">Home</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_main_page_content_description">Represents an image view in the
        item
    </string>
    <string name="password">PASSWORD</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="if_you_are_a_new_user_click">IF YOU ARE A NEW USER CLICK</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="email">EMAIL</string>
    <string name="dodaj_nowy_produkt">Dodaj nowy produkt</string>
    <string name="nazwa_produktu">Nazwa produktu</string>
    <string name="opis_produktu">Opis produktu</string>
    <string name="cena_produktu">Cena produktu</string>
    <string name="dodaj">Dodaj</string>
    <string name="wybierz_zdjecie">Wybierz zdjęcie</string>
    <string name="kup_teraz">Kup teraz</string>
</resources>